--- a/report.html
+++ b/report.html
@@ -23,11 +23,105 @@
     <div id="content" class="report">
         <div class="layout">
             <div class="title">
+                <span>报表</span>
+            </div>
+            <div class="tabList">
+                <ul>
+                    <li class="checked"><span>日报表</span></li>
+                    <li><span>周报表</span></li>
+                    <li><span>月报表</span></li>
+                    <li><span>年报表</span></li>
+                </ul>
+            </div>
+            <div class="title">
                 <div class="item"><span>开始时间</span><input></div>
                 <div class="item"><span>结束时间</span><input></div>
                 <a class="btn">查询</a>
             </div>
-            <div class="tabCon">
+            <div class="navTree" id="navTree">
+                <div class="treeTit">
+                    <span>考评对象</span>
+                    <span>时间</span>
+                    <span>评分</span>
+                    <span>是否合格</span>
+                    <span>修改人</span>
+                </div>
+                <div id="ulHeight">
+                    <ul>
+                        <li>
+                            <div class="item">
+                                <div class="itemLeft firstSub">
+                                    <img src="images/template/‭icon-open.png"/>
+                                    <p>综合执法平台</p>
+                                </div>
+                                <p>2019-12-16</p>
+                                <p>50</p>
+                                <p>否</p>
+                                <p>--</p>
+                            </div>
+                            <ul class="navSub">
+                                <li>
+                                    <div class="item secItem">
+                                        <div class="itemLeft secSub">
+                                            <img src="images/template/‭icon-open.png"/>
+                                            <p>中间件</p>
+                                        </div>
+                                        <p>2019-12-16</p>
+                                        <p>50</p>
+                                        <span class="buttonDetail">详情</span>
+                                        <p>--</p>
+                                    </div>
+                                    <ul class="navThree">
+                                        <li>
+                                            <p>服务器</p>
+                                            <p>2019-12-16</p>
+                                            <p>50</p>
+                                            <span class="buttonDetail">详情</span>
+                                            <p>--</p>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <div class="item">
+                                <div class="itemLeft firstSub">
+                                    <img src="images/template/‭icon-open.png"/>
+                                    <p>大数据治理平台</p>
+                                </div>
+                                <p>2019-12-16</p>
+                                <p>50</p>
+                                <p>否</p>
+                                <p>--</p>
+                            </div>
+                            <ul class="navSub">
+                                <li>
+                                    <div class="item secItem">
+                                        <div class="itemLeft secSub">
+                                            <img src="images/template/‭icon-open.png"/>
+                                            <p>中间件</p>
+                                        </div>
+                                        <p>2019-12-16</p>
+                                        <p>50</p>
+                                        <span class="buttonDetail">详情</span>
+                                        <p>--</p>
+                                    </div>
+                                    <ul class="navThree">
+                                        <li>
+                                            <p>服务器</p>
+                                            <p>2019-12-16</p>
+                                            <p>50</p>
+                                            <span class="buttonDetail">详情</span>
+                                            <p>--</p>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!--<div class="tabCon">
                 <table>
                     <thead>
                     <tr>
@@ -46,7 +140,7 @@
                         <td>2019-12-16</td>
                         <td>50</td>
                         <td>否</td>
-                        <td>--</td>
+                        <td>&#45;&#45;</td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -54,7 +148,7 @@
                         <td>2019-11-26</td>
                         <td>90</td>
                         <td>是</td>
-                        <td>--</td>
+                        <td>&#45;&#45;</td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -62,7 +156,35 @@
                         <td>2019-10-06</td>
                         <td>70</td>
                         <td>是</td>
-                        <td>--</td>
+                        <td>&#45;&#45;</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>-->
+        </div>
+    </div>
+    <div class="tcHide report" id="buttonDetail">
+        <div class="masking" onclick="$('#buttonDetail').hide()"></div>
+        <div class="tcCon">
+            <div class="title">
+                <div class="item"><span>开始时间</span><input></div>
+                <div class="item"><span>结束时间</span><input></div>
+                <a class="btn">查询</a>
+            </div>
+            <div class="tabCon">
+                <table>
+                    <thead>
+                    <tr>
+                        <td>序号</td>
+                        <td>时间</td>
+                        <td>原因</td>
+                    </tr>
+                    </thead>
+                    <tbody id="table">
+                    <tr>
+                        <td>1</td>
+                        <td>2019-12-16</td>
+                        <td>故障</td>
                     </tr>
                     </tbody>
                 </table>
@@ -77,5 +199,18 @@
         var docHeight = window.innerHeight || document.documentElement.clientHeight;
         $("#content .layout").css("height", docHeight - 142);
     });
+    $(".tabList li").click(function () {
+        $(this).addClass("checked").siblings("li").removeClass("checked")
+    });
+    $("#ulHeight li .firstSub").click(function () {
+        $(".navThree").hide();
+        $(this).parents(".item").siblings(".navSub").toggle().end().parents("li").siblings("li").children(".navSub").hide();
+    });
+    $(".navSub li .secSub").click(function () {
+        $(this).parents(".secItem").siblings(".navThree").toggle();
+    })
+    $(".buttonDetail").click(function () {
+      $("#buttonDetail").show()
+    })
 </script>
 </html>
