--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <li><span>年</span></li>
                             </ul>
                         </div>
-                        <div class="rankList">
+                        <div class="rankList" id="rankList">
                             <ul>
                                 <li>
                                     <p>大数据治理应用平台</p>
